--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopgate/react-hammerjs",
-  "version": "0.5.5",
+  "version": "0.5.6",
   "description": "ReactJS / HammerJS integration. Support touch events in your React app.",
   "main": "dist/react-hammerjs.js",
   "author": "Jed Watson",
@@ -13,8 +13,9 @@
     "hammerjs": "^2.0.8"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.6.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "browserify-shim": "^3.8.12",
